# ros_mavros_wp_mission

./: CMakeLists.txt  README.md  package.xml
launch/: default.launch  global.launch  local.launch
src/: global_pos_mission.cpp  local_pos_mission.cpp  main.cpp
